<resources>
    <string name="app_name">OneDay</string>
    <string name="enter_username_or_email">Enter username or email</string>
    <string name="enter_password">Enter password</string>
    <string name="login">Login</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="refer"><![CDATA[Refere & Earn]]></string>
    <string name="faq">FAQ\'s</string>
    <string name="help">Help</string>
    <string name="about">About Us</string>
    <string name="logout">Logout</string>
    <string name="add">Add</string>
    <string name="account">Account</string>
    <string name="fav">Wishlist</string>
    <string name="filter">Filter</string>
    <string name="action_settings">Settings</string>
</resources>
