<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:showAsAction="never" />

    <item
        android:id="@+id/nav_search"
        android:enabled="true"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="never" />

    <item
        android:id="@+id/nav_add"
        android:enabled="true"
        android:icon="@drawable/ic_add"
        android:title="@string/add"
        app:showAsAction="never" />

    <item
        android:id="@+id/nav_fav"
        android:enabled="true"
        android:icon="@drawable/ic_fav"
        android:title="@string/fav"
        app:showAsAction="never" />

    <item
        android:id="@+id/nav_account"
        android:enabled="true"
        android:icon="@drawable/ic_account"
        android:title="@string/account"
        app:showAsAction="never" />

</menu>
