<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rl_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginTop="50dp"
        android:gravity="top|center"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_username_or_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textColorHint="@color/transparent_white"
            android:textSize="14sp"
            app:backgroundTint="@color/transparent_white"
            android:text="mbabhi92@gmail.com"/>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_login_password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password"
            android:imeOptions="flagNoExtractUi"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/transparent_white"
            android:textSize="14sp"
            app:backgroundTint="@color/transparent_white"
            android:text="54321"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@color/violet"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="25dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Forgot password ?"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="italic" />

    </LinearLayout>
</RelativeLayout>